; ModuleID = '/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_remove_ref.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_remove_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mode_tree_data = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mode_tree_data*)* @mode_tree_remove_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mode_tree_remove_ref(%struct.mode_tree_data* %0) #0 {
  %2 = alloca %struct.mode_tree_data*, align 8
  store %struct.mode_tree_data* %0, %struct.mode_tree_data** %2, align 8
  %3 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %4 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = add nsw i64 %5, -1
  store i64 %6, i64* %4, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %10 = call i32 @free(%struct.mode_tree_data* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @free(%struct.mode_tree_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
